# ultimengine

./: .gitignore  Cargo.toml  README.md  TODO.txt
.cargo/: config.toml
benches/: engine.rs  moves.rs  one_game.rs
data/: README.md  sortdepthanalysis.txt
src/: benchmark.rs  bitboard.rs  board.rs  counting.rs  game.rs  generated.rs  lib.rs  main.rs  moves.rs  openingbook.rs  ref_counting.rs  table.rs  zobrist.rs
