[package]
name = "ultimengine"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", optional = true }
cfg-if = "1.0.1"
rand = "0.9.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "one_game"
harness = false

[features]
savestates = ["dep:bincode"]
benchmark = []

[profile.release]
codegen-units = 1
lto = false
debug = true

