[package]
name = "ultimengine"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", optional = true }
cfg-if = "1.0.1"
mimalloc = "0.1.47"
rand = "0.9.1"

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "engine"
harness = false

[features]
savestates = ["dep:bincode"]

[profile.release]
codegen-units = 1
lto = "fat"

